# yoktez

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  assets.md  client.md  concurrency.md  cookbook.md  data-models.md  design.md  enums.md  errors.md  getting-started.md  logging.md  lookups.md  metadata.md  search.md
examples/: batch_download.py  multithreaded_pool.py  quickstart.py  simple_search.py
src/yoktez/: __about__.py  __init__.py  _endpoints.py  _helpers.py  _http.py  bilingual.py  client.py  enums.py  errors.py
src/yoktez/assets/: __init__.py  _parser.py  models.py
src/yoktez/lookups/: __init__.py  _parser.py  models.py
src/yoktez/metadata/: __init__.py  _parser.py  models.py
src/yoktez/search/: __init__.py  _parser.py  models.py
tests/: test_assets.py  test_assets_live.py  test_assets_parser.py  test_bilingual.py  test_client.py  test_endpoints.py  test_enums.py  test_errors.py  test_http.py  test_lookups.py  test_lookups_parser.py  test_metadata.py  test_metadata_live.py  test_metadata_models.py  test_metadata_parser.py  test_public_api.py  test_search.py  test_search_live.py  test_search_models.py  test_search_parser.py
tests/fixtures/assets/: no-permit-en.html  no-permit-tr.html  pdf-and-appendix.html  pdf.html  preparing-en.html  preparing-tr.html  under-embargo-en.html  under-embargo-tr.html
tests/fixtures/lookups/: all-departments.html  all-divisions-legacy.html  all-divisions-modern.html  all-institutes-legacy.html  all-institutes-modern.html  all-sections.html  all-subjects.html  all-universities-legacy.html  divisions.html  institutes.html  keywords.html  universities-int.json  universities-tr.json
tests/fixtures/metadata/: result.json
tests/fixtures/search/: results-many.html  results-single.html
